--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
   "name": "jeevag-portfolio",
   "version": "1.0.0",
-  "description": "A modern, interactive portfolio featuring **3D animations**, **glassmorphism UI**, and **mini-games**.   Built to showcase my skills, projects, and creativity in web development.",
+  "description": "A modern, interactive portfolio featuring 3D animations, glassmorphism UI, and mini-games. Built to showcase my skills, projects, and creativity in web development.",
   "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css",
+    "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css --watch",
+    "dev": "npm run watch:css"
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
     "node-fetch": "^3.3.2",
     "three": "^0.160.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jeeva562/Portfolios.git"
-  },
-  "scripts": {
-  "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css",
-  "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css --watch",
-  "dev": "npm run watch:css"
-  },
-  "author": "jeeva562",
-  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.1",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
     "live-server": "^1.2.2",
     "parse-sel": "^1.0.0",
     "postcss": "^8.5.6",
     "nodemon": "^3.3.2",
     "tailwindcss": "^3.4.17"
   },
-  "keywords": [],
+  "author": "jeeva562",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeeva562/Portfolios.git"
+  },
   "bugs": {
     "url": "https://github.com/jeeva562/Portfolios/issues"
   },
