--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "A modern, interactive portfolio featuring 3D animations, glassmorphism UI, and mini-games. Built to showcase my skills, projects, and creativity in web development.",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-    "start": "node server.js",
-    "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css",
-    "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css --watch",
-    "dev": "nodemon server.js"
+
+"scripts": {
+  "start": "node server.js",
+  "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/css/tailwind.css -o ./dist/css/style.css",
+  "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/css/tailwind.css -o ./dist/css/style.css --watch",
+  "dev": "nodemon server.js"
+
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "three": "^0.160.0"
   },
@@ -21,9 +23,11 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.1",
     "live-server": "^1.2.2",
+
+    "nodemon": "^3.1.10",
     "parse-sel": "^1.0.0",
     "postcss": "^8.5.6",
-    "nodemon": "^3.1.10",
+
     "tailwindcss": "^3.4.17"
   },
   "author": "jeeva562",
