--- a/config/package.json
+++ b/config/package.json
@@ -6,15 +6,12 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "node server.js",
-    "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/css/tailwind.css -o ./dist/css/style.css",
-    "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/css/tailwind.css -o ./dist/css/style.css --watch",
-    "dev": "nodemon server.js"
+    "start": "node server.js", 
+    "dev": "nodemon server.js",
+    "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./public/src/css/style.css --minify",
+    "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./public/src/css/style.css --watch"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "three": "^0.160.0"
   },
