--- a/package.json
+++ b/package.json
@@ -2,27 +2,22 @@
   "name": "jeevag-portfolio",
   "version": "1.0.0",
   "description": "A modern, interactive portfolio featuring 3D animations, glassmorphism UI, and mini-games. Built to showcase my skills, projects, and creativity in web development.",
-  "main": "server.js",
-  "type": "module",
   "private": true,
   "scripts": {
-    "start": "node server.js", 
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./public/src/css/style.css --minify",
-    "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./src/tailwind.css -o ./public/src/css/style.css --watch"
-  },
-  "dependencies": {
-    "node-fetch": "^3.3.2",
-    "three": "^0.160.0"
+    "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./public/tailwind.css -o ./public/css/style.css --minify",
+    "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./public/tailwind.css -o ./public/css/style.css --watch",
+    "serve": "live-server public"
   },
   "devDependencies": {
+    "@dhiwise/component-tagger": "^1.0.10",
+    "@tailwindcss/cli": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.1",
     "live-server": "^1.2.2",
-    "nodemon": "^3.1.10",
-    "parse-sel": "^1.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.13"
   },
   "author": "jeeva562",
   "license": "MIT",
